cabal-version:      2.4
name:               hash-shell
version:            0.1.0.0
synopsis:           A shell written in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Lee Ehudin
maintainer:         percivalgambit@gmail.com

-- A copyright notice.
-- copyright:
category:           Shell
extra-source-files: CHANGELOG.md

executable hash
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      unix ^>=2.7.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
